force-app/main/default/objects/ucinn_ascendv2__Briefing__c/ucinn_ascendv2__Briefing__c.object-meta.xml
<CustomObject>
    <description>Details related to prospecting events and detail what occurred at the event.</description>
    <label>Briefing</label>
    <nameField>
        <label>Briefing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Briefings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>