force-app/main/default/objects/ucinn_ascendv2__Briefing__c/fields/Audience_Multiselect__c.field-meta.xml
<CustomField>
    <fullName>Audience_Multiselect__c</fullName>
    <label>Audience Multiselect</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Dean Easterling</fullName>
            </value>
            <value>
                <fullName>ISUF Event</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Larissa Holtmyer Jones</fullName>
            </value>
            <value>
                <fullName>President Wintersteen</fullName>
            </value>
            <value>
                <fullName>Principal Gifts</fullName>
            </value>
            <value>
                <fullName>Provost Wickert</fullName>
            </value>
            <value>
                <fullName>Robert Waggoner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>