force-app/main/default/objects/ucinn_ascendv2__Briefing__c/fields/Contact_Report__c.field-meta.xml
<CustomField>
    <fullName>Contact_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Report</label>
    <referenceTo>ucinn_ascendv2__Contact_Report__c</referenceTo>
    <relationshipLabel>Briefings</relationshipLabel>
    <relationshipName>Briefings_Contact_Report</relationshipName>
    <type>Lookup</type>
</CustomField>