force-app/main/default/objects/ucinn_ascendv2__Briefing__c/fields/Donor_Id__c.field-meta.xml
<CustomField>
    <fullName>Donor_Id__c</fullName>
    <formula>IF ( ISBLANK( ucinn_ascendv2__Contact__c ),  ucinn_ascendv2__Account__r.ucinn_ascendv2__Donor_ID__c , ucinn_ascendv2__Contact__r.ucinn_ascendv2__Donor_ID__c )</formula>
    <label>Donor Id</label>
    <type>Text</type>
</CustomField>