force-app/main/default/objects/ucinn_ascendv2__Briefing__c/fields/ucinn_ascendv2__Audience__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Audience__c</fullName>
    <defaultValue>$User.Department</defaultValue>
    <label>Audience</label>
    <length>255</length>
    <type>Text</type>
</CustomField>