force-app/main/default/objects/ucinn_ascendv2__Briefing__c/fields/ucinn_ascendv2__Briefing_Name_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Briefing_Name_Auto_Number__c</fullName>
    <displayFormat>BR-{0000000}</displayFormat>
    <label>Briefing Name Auto Number</label>
    <type>AutoNumber</type>
</CustomField>