force-app/main/default/objects/ucinn_ascendv2__Briefing__c/fields/ucinn_ascendv2__Briefing_Paragraph__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Briefing_Paragraph__c</fullName>
    <label>Briefing Paragraph</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>