force-app/main/default/objects/ucinn_ascendv2__Briefing__c/fields/ucinn_ascendv2__Briefing_Purpose__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Briefing_Purpose__c</fullName>
    <label>Briefing Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Giving</fullName>
            </value>
            <value>
                <fullName>Speaking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>