force-app/main/default/objects/ucinn_ascendv2__Briefing__c/fields/ucinn_ascendv2__Contact__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Constituent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Briefings</relationshipLabel>
    <relationshipName>Briefings_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>