force-app/main/default/objects/ucinn_ascendv2__Briefing__c/recordTypes/ucinn_ascendv2__Account_Briefing.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Account_Briefing</fullName>
    <active>true</active>
    <description>A briefing for a household or corporation/organization.</description>
    <label>Account Briefing</label>
</RecordType>