force-app/main/default/objects/ucinn_ascendv2__Briefing__c/recordTypes/ucinn_ascendv2__Contact_Briefing.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Contact_Briefing</fullName>
    <active>true</active>
    <description>A briefing for a constituent.</description>
    <label>Contact Briefing</label>
</RecordType>