force-app/main/default/objects/ucinn_ascendv2__Briefing__c/validationRules/ucinn_ascendv2__Prevent_Editing_Audience_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>ucinn_ascendv2__Prevent_Editing_Audience_Field</fullName>
    <active>false</active>
    <description>Once populated, prevent users (other than system administrators) from audience field.</description>
    <errorConditionFormula>$Setup.ucinn_ascendv2__Bypass_Settings__c.ucinn_ascendv2__Bypass_Validation_Rules__c &lt;&gt; TRUE &amp;&amp;
ISCHANGED( ucinn_ascendv2__Audience__c ) &amp;&amp; $Profile.Name &lt;&gt; &quot;System Administrator&quot; &amp;&amp;
OR(
RecordType.DeveloperName = &quot;Contact_Briefing&quot;,
RecordType.DeveloperName = &quot;Account_Briefing&quot;
)&amp;&amp;
RecordType.NamespacePrefix = &apos;ucinn_ascendv2&apos;</errorConditionFormula>
    <errorDisplayField>ucinn_ascendv2__Audience__c</errorDisplayField>
    <errorMessage>The audience field can only be edited by system administrators.</errorMessage>
</ValidationRule>