force-app/main/default/objects/ucinn_ascendv2__Briefing__c/validationRules/ucinn_ascendv2__User_Unit_Must_Equal_Audience_Unit.validationRule-meta.xml
<ValidationRule>
    <fullName>ucinn_ascendv2__User_Unit_Must_Equal_Audience_Unit</fullName>
    <active>false</active>
    <description>Only users who are in the unit of the audience or system administrators can edit the record.</description>
    <errorConditionFormula>$Setup.ucinn_ascendv2__Bypass_Settings__c.ucinn_ascendv2__Bypass_Validation_Rules__c &lt;&gt; TRUE &amp;&amp;
$User.Department != ucinn_ascendv2__Audience__c &amp;&amp; $Profile.Name &lt;&gt; &quot;System Administrator&quot; &amp;&amp;
OR(
RecordType.DeveloperName = &quot;Contact_Briefing&quot;,
RecordType.DeveloperName = &quot;Account_Briefing&quot;
)&amp;&amp;
RecordType.NamespacePrefix = &apos;ucinn_ascendv2&apos;</errorConditionFormula>
    <errorDisplayField>ucinn_ascendv2__Audience__c</errorDisplayField>
    <errorMessage>Only users who are in the unit of the audience or system administrators can edit the record.</errorMessage>
</ValidationRule>